--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
 <script src="script.js"></script>
+
+<div id="keyboard">
+  <div class="krow">
+    <button class="key">Q</button><button class="key">W</button><button class="key">E</button><button class="key">R</button><button class="key">T</button><button class="key">Y</button><button class="key">U</button><button class="key">I</button><button class="key">O</button><button class="key">P</button>
+  </div>
+  <div class="krow">
+    <button class="key">A</button><button class="key">S</button><button class="key">D</button><button class="key">F</button><button class="key">G</button><button class="key">H</button><button class="key">J</button><button class="key">K</button><button class="key">L</button>
+  </div>
+  <div class="krow krow-nav">
+    <button class="key wide" data-key="Enter">Enter</button>
+    <button class="key">Z</button><button class="key">X</button><button class="key">C</button><button class="key">V</button><button class="key">B</button><button class="key">N</button><button class="key">M</button>
+    <button class="key wide" data-key="Backspace">⌫</button>
+  </div>
+</div>
+
 <p id="disclaimer"><strong>Disclaimer: This is a fun project to learn coding and has no commercial value. All rights are with the amazing NYTimes only.</strong></p>
 <script>
 if ('serviceWorker' in navigator) {
