--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <html lang="en">
 <head>
 <link href="manifest.json" rel="manifest"/>
-<meta content="#8b5cf6" name="theme-color"/>
+<meta content="#6aaa64" name="theme-color"/>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
 <title>FIHR - Foodle</title>
-<!-- Clear Sans webfont for NYTimes  look -->
+<!-- Clear Sans webfont for NYTimes Wordle look -->
 <link href="https://cdn.jsdelivr.net/gh/resir014/Clear-Sans-Webfont@v1.1.1/css/clear-sans.css" rel="stylesheet"/>
-<link href="css/style.css?v=v2.3" rel="stylesheet"/>
+<link href="css/style.css?v=v2.4" rel="stylesheet"/>
 <link href="logo.png" rel="apple-touch-icon"/><meta content="yes" name="apple-mobile-web-app-capable"/><meta content="FunWords" name="apple-mobile-web-app-title"/><meta content="default" name="apple-mobile-web-app-status-bar-style"/><link href="/icons/icon-120x120.png" rel="apple-touch-icon" sizes="120x120"/><link href="/icons/icon-152x152.png" rel="apple-touch-icon" sizes="152x152"/><link href="/icons/icon-167x167.png" rel="apple-touch-icon" sizes="167x167"/><link href="/icons/icon-180x180.png" rel="apple-touch-icon" sizes="180x180"/><link href="/splash/launch-640x1136.png" media="(device-width: 320px)" rel="apple-touch-startup-image"/><link href="/splash/launch-750x1334.png" media="(device-width: 375px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1242x2208.png" media="(device-width: 414px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1536x2048.png" media="(device-width: 768px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1668x2224.png" media="(device-width: 834px)" rel="apple-touch-startup-image"/><link href="/splash/launch-2048x2732.png" media="(device-width: 1024px)" rel="apple-touch-startup-image"/></head>
-
+<body tabindex="0">
 
 <div id="menu-root">
   <button id="menu-btn" aria-label="Menu" title="Menu">⋯</button>
@@ -23,7 +23,7 @@
 
 <div id="countdown">Next word in 00:00:00</div>
 <h1 class="app-title">FIHR – Foodle</h1>
-<div class="subtle-version">Build v2.2</div>
+<div id="version-label" class="subtle-version"></div>
 <!-- Toast container -->
 <div id="toast-container"></div>
 <div class="game-container">
@@ -33,10 +33,6 @@
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v2.3"></script>
 
 <div id="keyboard">
   <div class="krow">
@@ -51,6 +47,9 @@
     <button class="key wide" data-key="Backspace">⌫</button>
   </div>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
+<script src="script.js?v=v2.4"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
