--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <title>FIHR - Foodle</title>
 <!-- Clear Sans webfont for NYTimes Wordle look -->
 <link href="https://cdn.jsdelivr.net/gh/resir014/Clear-Sans-Webfont@v1.1.1/css/clear-sans.css" rel="stylesheet"/>
-<link href="css/style.css?v=v2.9" rel="stylesheet"/>
+<link href="css/style.css?v=v3.0" rel="stylesheet"/>
 <link href="logo.png" rel="apple-touch-icon"/><meta content="yes" name="apple-mobile-web-app-capable"/><meta content="FunWords" name="apple-mobile-web-app-title"/><meta content="default" name="apple-mobile-web-app-status-bar-style"/><link href="/icons/icon-120x120.png" rel="apple-touch-icon" sizes="120x120"/><link href="/icons/icon-152x152.png" rel="apple-touch-icon" sizes="152x152"/><link href="/icons/icon-167x167.png" rel="apple-touch-icon" sizes="167x167"/><link href="/icons/icon-180x180.png" rel="apple-touch-icon" sizes="180x180"/><link href="/splash/launch-640x1136.png" media="(device-width: 320px)" rel="apple-touch-startup-image"/><link href="/splash/launch-750x1334.png" media="(device-width: 375px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1242x2208.png" media="(device-width: 414px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1536x2048.png" media="(device-width: 768px)" rel="apple-touch-startup-image"/><link href="/splash/launch-1668x2224.png" media="(device-width: 834px)" rel="apple-touch-startup-image"/><link href="/splash/launch-2048x2732.png" media="(device-width: 1024px)" rel="apple-touch-startup-image"/></head>
 <body tabindex="0">
 
@@ -26,15 +26,7 @@
 <div id="toast-container"></div>
 <div class="game-container">
 <img src="assets/fihr-foodle-title.png?v=v2.7" alt="FIHR Foodle" class="title-banner">
-<div id="version-label" class="subtle-version"></div>
-
-<div id="legend" class="legend">
-  <span class="chip correct" aria-label="Correct position"></span><em>Correct</em>
-  <span class="chip present" aria-label="Present elsewhere"></span><em>Present</em>
-  <span class="chip absent" aria-label="Not in word"></span><em>Absent</em>
-</div>
-
-<div id="grid">
+<div id="version-label" class="subtle-version"></div><div id="grid">
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
@@ -56,7 +48,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v2.9"></script>
+<script src="script.js?v=v3.0"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
