--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 </div>
 
 <div id="hint-zone"><div class="hint-row"><button id="hint-link" class="hint-link" type="button">💡 Get a hint</button></div><div id="inline-hint" aria-live="polite"></div></div>
-<div id="version-label" class="subtle-version"></div><div id="grid">
+<div id="version-label" class="subtle-version"></div><div id="hint-banner" style="display:none"></div>
+<div id="grid">
 <div class="row"><div class="tile"></div>
 </div>
 <div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
