--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@ if ('serviceWorker' in navigator) {
   });
 }
 </script>
-  <script src="scripts/patch.foodle.v3.7.12.js"></script>
+  <script src="scripts/patch.foodle.v3.7.12a.js"></script>
 </body>
 </html>
