--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <div id="toast-container"></div>
 <div class="game-container">
 <img src="assets/fihr-foodle-title.png?v=v2.7" alt="FIHR Foodle" class="title-banner">
-<div id="version-label" class="subtle-version"></div><div id="grid">
+<div id="version-label" class="subtle-version"></div>
+<div class="controls"><button id="hintBtn" class="hint-btn" aria-label="Use a hint">💡 Hint</button></div><div id="grid">
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
@@ -48,7 +49,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v3.7.13"></script>
+<script src="script.js?v=v3.7.14"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
