--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
 <div id="countdown">Next word in 00:00:00</div><!-- Toast container -->
 <div id="toast-container"></div>
 <div class="game-container">
+
+<div id="hintModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="hintTitle">
+  <div class="modal-backdrop"></div>
+  <div class="modal-box" role="document">
+    <h2 id="hintTitle">Use a hint?</h2>
+    <p>Using a hint will <strong>leave only one guess remaining</strong>. All other remaining rows will be crossed out.</p>
+    <div class="modal-actions">
+      <button id="hintCancel" class="btn btn-secondary" aria-label="Cancel">Cancel</button>
+      <button id="hintConfirm" class="btn btn-primary" aria-label="Confirm use of hint">Use hint</button>
+    </div>
+  </div>
+</div>
+
 <img src="assets/fihr-foodle-title.png?v=v2.7" alt="FIHR Foodle" class="title-banner">
 <div id="version-label" class="subtle-version"></div>
 <div class="controls"><button id="hintBtn" class="hint-btn" aria-label="Use a hint">💡 Hint</button></div><div id="grid">
@@ -49,7 +62,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v3.7.14"></script>
+<script src="script.js?v=v3.7.15"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
