--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
 <img src="assets/fihr-foodle-title.png?v=v2.7" alt="FIHR Foodle" class="title-banner">
 <div class="controls"><button id="hintBtn" class="hint-btn" aria-label="Use a hint">💡 Hint</button></div>
-<div id="hintText" class="hint-text"></div><div id="grid">
+<div id="hintText" class="hint-text"></div>
+<div id="grid">
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
@@ -62,7 +63,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v4.0.1"></script>
+<script src="script.js?v=v4.0.3"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
@@ -71,6 +72,6 @@ if ('serviceWorker' in navigator) {
   });
 }
 </script>
-  <script src="hint-addon.js?v=v4.0.1"></script>
+  <script src="hint-addon.js?v=v4.0.3"></script>
 </body>
 </html>
