--- a/index.html
+++ b/index.html
@@ -27,6 +27,51 @@
 <div id="toast-container"></div>
 <div class="game-container">
 
+<div id="aboutModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="aboutTitle">
+  <div class="modal-backdrop"></div>
+  <div class="modal-box" role="document">
+    <h2 id="aboutTitle">About FIHR Foodle</h2>
+    <p>Play the daily 5-letter food word game! Follow us here:</p>
+    
+<div class="about-links" style="margin-top:.6rem; display:flex; gap:.6rem; flex-wrap:wrap;">
+  <a class="btn-ghost" href="https://www.instagram.com/foodiesinhydreloaded/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+    <svg width="16" height="16" viewBox="0 0 24 24" style="vertical-align:-2px;margin-right:.35rem;"><path fill="#E1306C" d="M7 2C4.2 2 2 4.2 2 7v10c0 2.8 2.2 5 5 5h10c2.8 0 5-2.2 5-5V7c0-2.8-2.2-5-5-5H7zm0 2h10c1.7 0 3 1.3 3 3v10c0 1.7-1.3 3-3 3H7c-1.7 0-3-1.3-3-3V7c0-1.7 1.3-3 3-3zm11 2a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10z"/></svg>
+    Instagram
+  </a>
+  <a class="btn-ghost" href="https://www.facebook.com/groups/foodiesinhyd" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+    <svg width="16" height="16" viewBox="0 0 24 24" style="vertical-align:-2px;margin-right:.35rem;"><path fill="#1877F2" d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 5 3.66 9.13 8.44 9.88v-6.99H8.1V12h2.34V9.8c0-2.31 1.38-3.58 3.49-3.58.99 0 2.03.18 2.03.18v2.24h-1.14c-1.12 0-1.47.7-1.47 1.42V12h2.5l-.4 2.89h-2.1v6.99C18.34 21.13 22 17 22 12z"/></svg>
+    Facebook
+  </a>
+</div>
+
+    <div class="modal-actions" style="margin-top:.8rem; display:flex; justify-content:flex-end;">
+      <button id="aboutClose" class="btn-ghost">Close</button>
+    </div>
+  </div>
+</div>
+
+
+<div id="statsModal" class="hidden" role="dialog" aria-modal="true" aria-labelledby="statsTitle">
+  <div class="modal-backdrop"></div>
+  <div class="modal-box" role="document">
+    <h2 id="statsTitle">Your Stats</h2>
+    <div class="stats-grid">
+      <div class="stats-card"><div class="label">Played</div><div class="value" id="stPlayed">0</div></div>
+      <div class="stats-card"><div class="label">Wins</div><div class="value" id="stWins">0</div></div>
+      <div class="stats-card"><div class="label">Win Rate</div><div class="value" id="stWinRate">0%</div></div>
+      <div class="stats-card"><div class="label">Current Streak</div><div class="value" id="stCurStreak">0</div></div>
+      <div class="stats-card"><div class="label">Max Streak</div><div class="value" id="stMaxStreak">0</div></div>
+      <div class="stats-card"><div class="label">Avg Guesses</div><div class="value" id="stAvgGuesses">0.0</div></div>
+      <div class="stats-card"><div class="label">Hints Used</div><div class="value" id="stHints">0</div></div>
+    </div>
+    <div class="stats-actions">
+      <button class="btn stats-reset" id="statsReset">Reset</button>
+      <button class="btn stats-close" id="statsClose">Close</button>
+    </div>
+  </div>
+</div>
+
+
 <div id="hintModal" class="modal hidden" role="dialog" aria-modal="true" aria-labelledby="hintTitle">
   <div class="modal-backdrop"></div>
   <div class="modal-box" role="document">
@@ -40,7 +85,7 @@
 </div>
 
 <img src="assets/fihr-foodle-title.png?v=v2.7" alt="FIHR Foodle" class="title-banner">
-<div class="controls"><button id="hintBtn" class="hint-btn" aria-label="Use a hint">💡 Hint</button></div>
+<div class="controls"><button id="aboutBtn" class="btn-ghost" aria-label="About">ℹ️ About</button><button id="statsBtn" class="btn-ghost" aria-label="View stats">📊 Stats</button><button id="hintBtn" class="hint-btn" aria-label="Use a hint">💡 Hint</button></div>
 <div id="hintText" class="hint-text"></div>
 <div id="grid">
 <div class="row"><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div><div class="tile"></div></div>
@@ -64,7 +109,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v4.0.8"></script>
+<script src="script.js?v=v4.0.9"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
@@ -74,5 +119,7 @@ if ('serviceWorker' in navigator) {
 }
 </script>
   <script src="hint-addon.js?v=v4.0.8"></script>
+  <script src="ui-addon.js?v=v4.0.9"></script>
+  <script src="stats-addon.js?v=v4.0.9"></script>
 </body>
 </html>
