--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
-<script src="script.js?v=v4.0.13"></script>
+<script src="script.js?v=v4.0.14"></script>
 <script>
 if ('serviceWorker' in navigator) {
   window.addEventListener('load', () => {
@@ -120,8 +120,9 @@ if ('serviceWorker' in navigator) {
 </script>
   <script src="hint-addon.js?v=v4.0.8"></script>
   <script src="ui-addon.js?v=v4.0.9"></script>
-  <script src="stats-addon.js?v=v4.0.13"></script>
-  <script src="social-addon.js?v=v4.0.13"></script>
-  <script src="menu-addon.js?v=v4.0.12"></script>
+  <script src="stats-addon.js?v=v4.0.14"></script>
+  <script src="social-addon.js?v=v4.0.14"></script>
+  <script src="menu-addon.js?v=v4.0.14"></script>
+  <script src="cleanup-addon.js?v=v4.0.14"></script>
 </body>
 </html>
